kubernetes/apps/infrastructure/envoy-gateway-waypoint/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-waypoint
  namespace: envoy-gateway-system
  labels:
    istio.io/waypoint-for: workload
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
